--- a/templates/phaselist_template.html
+++ b/templates/phaselist_template.html
@@ -45,13 +45,10 @@
 
     <nav role="navigation" class="navbar navbar-dark bg-inverse">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Phase List</a> </div>
+            <a class="navbar-brand" href="javascript:void(0)" onclick="flip('phaselist');">Phase List</a> </div>
         </div>
         <div id="navbarCollapse" class="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)" onclick="flip('phaselist');">Dates</a>
-                </li>
                 <li class="nav-item">
                     <a id="new-link" class="nav-link" href="javascript:void(0)" onclick="flip('new');">New Moon</a>
                 </li>
