updated html template files

--- a/templates/full_template.html
+++ b/templates/full_template.html
@@ -1,14 +1,14 @@
-        <div id="quarter" class="content instructions">
-            <h1>Quarter Moon Phase</h1>
-            <p>There is a total of 5 days that straddle The Quarter Moon Phases.</p>
+        <div id="new" class="content instructions">
+            <h1>Full Moon Phase</h1>
+            <p>There is a total of 9 days that straddle The Full Moon Phase.</p>
             <table>
                 <tr>
                     <td valign="top" class="column1">Dinner</td>
                     <td>
-                        <p>Take 3-5 days (ideally consecutive days and central to the Quarter Moon):</p>
-                        <p>Elemental Bioforce Powders</p>
-                        <p>1/4 - 1/2 tsp of <span class="continuum">Continuum1</span> powder.</p>
-                        <p>1/4 - 1/2 tsp of <span class="continuum">Continuum2</span> powder.</p>
+                        <p>Take 5-9 days (ideally consecutive days and central to the New  Moon):</p>
+                        <p>Lunar Bioforce Powders</p>
+                        <p>1/2 - 3/4 tsp of <span class="renewal">Renewal</span> powder.</p>
+                        <p>1/4 tsp of <span class="maintenance">Maintenance</span> powder.</p>
 
                         <TMPL_INCLUDE NAME="powders_template.html">
                     </td>
@@ -16,10 +16,10 @@
                 <tr>
                     <td valign="top" class="column1">Breakfast</td>
                     <td>
-                        <p>Optional—take for 3-5 days (ideally consecutive days and central to the Quarter Moon):</p>
-                        <p>Elemental Bioforce Powders</p>
-                        <p>1/4 - 1/2 tsp of <span class="continuum">Continuum1</span> powder.</p>
-                        <p>1/4 - 1/2 tsp of <span class="continuum">Continuum2</span> powder.</p>
+                        <p>Optional—take 5-9 days (ideally consecutive days and central to the New  Moon):</p>
+                        <p>Lunar Bioforce Powders</p>
+                        <p>1/2 - 3/4 tsp of <span class="renewal">Renewal</span> powder.</p>
+                        <p>1/4 tsp of <span class="maintenance">Maintenance</span> powder.</p>
                     </td>
                 </tr>
                 <tr>
