updated image and bootstrap version

--- a/templates/full_template.html
+++ b/templates/full_template.html
@@ -1,4 +1,4 @@
-        <div id="new" class="content instructions">
+        <div id="full" class="content instructions">
             <h1>Full Moon Phase</h1>
             <p>There is a total of 9 days that straddle The Full Moon Phase.</p>
             <table>
