--- a/templates/phaselist_template.html
+++ b/templates/phaselist_template.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <style>
         body {
             font-family: 'PT Sans Narrow', sans-serif;
         }
         .instructions {
             padding-top: 10px;
+            padding-left: 2em;
+            padding-right: 2em;
         }
-        tr.row:hover {
+        tr.type_0:hover , 
+        tr.type_1:hover ,
+        tr.type_2:hover ,
+        tr.type_3:hover {
             background: orange;
             cursor: pointer;
          }
+        tr.type_0:hover {
+            color: black;
+        }
         .column1 {
             background-color: lightgrey;
             border: solid 1px black;
@@ -43,20 +51,20 @@
 </head>
 <body>
 
-    <nav role="navigation" class="navbar navbar-dark bg-inverse">
+    <nav role="navigation" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-header">
-            <a class="navbar-brand" href="javascript:void(0)" onclick="flip('phaselist');">Phase List</a> </div>
+            <a class="navbar-brand" href="#" onclick="flip('phaselist');">Phase List</a> </div>
         </div>
-        <div id="navbarCollapse" class="navbar-collapse">
-            <ul class="nav navbar-nav">
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="new-link" class="nav-link" href="javascript:void(0)" onclick="flip('new');">New Moon</a>
+                    <a id="new-link" class="nav-link" href="#" onclick="flip('new');">New Moon</a>
                 </li>
                 <li class="nav-item">
-                    <a id="quarter-link" class="nav-link" href="javascript:void(0)" onclick="flip('quarter');">Quarter Moon</a>
+                    <a id="quarter-link" class="nav-link" href="#" onclick="flip('quarter');">Quarter Moon</a>
                 </li>
                 <li class="nav-item">
-                    <a id="full-link" class="nav-link" href="javascript:void(0)" onclick="flip('full');">Full Moon</a>
+                    <a id="full-link" class="nav-link" href="#" onclick="flip('full');">Full Moon</a>
                 </li>
                 <!--<li class="nav-item">-->
                 <!--<a class="nav-link" href="javascript:void(0)">About</a>-->
@@ -65,7 +73,8 @@
         </div>
     </nav>
 
-    <div class='container-fluid'>
+
+    <div>
         <div id="phaselist" class="content table-responsive">
             <table class="table">
                 <thead>
@@ -75,11 +84,11 @@
                 </thead>
                 <tbody>
                 <TMPL_LOOP NAME="phase_list">
-                <tr class="row type_<TMPL_VAR NAME="type">">
+                <tr class="type_<TMPL_VAR NAME="type">">
                     <!-- start <TMPL_VAR NAME="start"> -->
                     <!-- end <TMPL_VAR NAME="end"> -->
                     <!-- phase <TMPL_VAR NAME="phase"> -->
-                    <td onclick="flip(<TMPL_VAR NAME="type">);" class="cell phase_name"><TMPL_VAR NAME="name"></td>
+                    <td scope="row" onclick="flip(<TMPL_VAR NAME="type">);" class="cell phase_name"><TMPL_VAR NAME="name"></td>
                     <td onclick="flip(<TMPL_VAR NAME="type">);" class="cell phase_start"><TMPL_VAR NAME="start_formatted"></td>
                     <td onclick="flip(<TMPL_VAR NAME="type">);" class="cell phase_date"><TMPL_VAR NAME="phase_formatted"></td>
                     <td onclick="flip(<TMPL_VAR NAME="type">);" class="cell phase_end"><TMPL_VAR NAME="end_formatted"></td>
@@ -92,9 +101,9 @@
         <TMPL_INCLUDE NAME="quarter_template.html">
         <TMPL_INCLUDE NAME="full_template.html">
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script>
         function flip(id) {
             var element_id;
