--- a/templates/tinctures_template.html
+++ b/templates/tinctures_template.html
@@ -1,7 +1,7 @@
 <p>General Information Re Tinctures:</p>
 <ol type="a">
-    <li>The tinctures are to be mixed with natural juice & non-carbonated water, according to personal taste preference. It should not be less than ±250 ml. and that the ratio is ±20% of natural juice to ±80% of water.</li>
-    <li>It is optional to take extra doses of PK&AK Tinctures: i.e. Mid-Morning & Mid-Afternoon. An additional dose may be taken after fitness training… during hot/torrid weather… or if extra doses are needed to assist with temporary stress, whether emotional, philosophical or physical.</li>
-    <li>If you prefer to take less of the PK&AK Tinctures, that is fine. It is your choice, let your taste dictate.</li>
+    <li>The tinctures are to be mixed with natural juice &amp; non-carbonated water, according to personal taste preference. It should not be less than ±250 ml. and that the ratio is ±20% of natural juice to ±80% of water.</li>
+    <li>It is optional to take extra doses of PK&amp;K Tinctures: i.e. Mid-Morning &amp; Mid-Afternoon. An additional dose may be taken after fitness training… during hot/torrid weather… or if extra doses are needed to assist with temporary stress, whether emotional, philosophical or physical.</li>
+    <li>If you prefer to take less of the PK&amp;AK Tinctures, that is fine. It is your choice, let your taste dictate.</li>
 </ol>
 <p><b>Note:</b> Those who experience high blood sugar levels should use their discretion regarding the ratio of juice to water—or if a person is diagnosed by a Doctor as diabetic.</p>
