tweaked css to remove scrollbar on table

--- a/templates/phaselist_template.html
+++ b/templates/phaselist_template.html
@@ -9,11 +9,17 @@
         body {
             font-family: 'PT Sans Narrow', sans-serif;
         }
+		#phaslist: {
+			overflow-x: hidden;
+		}
         .instructions {
             padding-top: 10px;
             padding-left: 2em;
             padding-right: 2em;
         }
+		.table {
+			width: 99%
+		}
         tr.type_0:hover ,
         tr.type_1:hover ,
         tr.type_2:hover ,
